# personal-projects

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT_INSTRUCTIONS.md  Makefile  README.md  UV_SETUP.md  banner.html  leaderboard.json  run_tango.sh
backend/: Dockerfile
bw_conv_cb/: README.md
computer_vision_test/: cifar_net.pth  class_net.py  hand_tracking_main.py  kmeans.py  pytorch_test.py
daily_coding_problem/: problem_001.py  problem_002.py  problem_003.py  problem_004.py  problem_005.py
dependency_visualizer/: README.md
find24/: README.md  equation_class.py  test_find24.py
flou/: README.md  flou_class.py  play_flou.py
frontend/: tailwind.config.js
golang/: hello.go
interface/: standardSet.h  utilities.h
life/: .gitignore  README.md  play_life.py
megamillions/: analyze_numbers.py  scrape_megamillions.py
minesweeper/: README.md  minesweeper.py
misc/: color_gradient.py  estimate_pi_mc.py  fizzbuzz.py  logistic.py  password_generator.py  rotate_leaf.py  search.py  sort.py  spike_detection.py  weighted_avg.py
public_html/: README.md  index.php
python/: run_produceAndPlot.py
scripts/: proxy_setup.sh
shortest_path_stargate/: .gitignore  README.md  graph_bfs_class.py  node_bfs_class.py  shortest_path.py  shortest_path_bfs.py  test_shortest_path.py
sliding_puzzle_solver/: README.md  slide_puzzle.py
src/: EnergyScaleCorrection_class.cc  dynamicBin.cc  plot_StandardSet.cc  plot_massScan.cc  producer_scaleSmearHists.cc  standardSet.cc  utilities.cc
sudoku_solver/: README.md  sudoku.py  sudoku_class.py  sudoku_validation.py  test_sudoku.py
tango/: GITHUB_PAGES_DEPLOYMENT.md  README.md  docker-compose.yml  leaderboard.json  pyproject.toml
tango/.github/workflows/: deploy.yml
tango/backend/: requirements.txt
tango/backend/app/: __init__.py
tango/backend/app/api/routes/: __init__.py  game.py
tango/backend/app/config/: puzzle_config.py
tango/backend/app/models/: game_models.py
tango/backend/app/services/: __init__.py  game_service.py  game_service_backup.py  game_service_clean.py
tango/backend/original_src/: config.py  game_logic.py  puzzle_generator.py
tango/frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
tango/frontend/src/: app.css
tango/frontend/src/lib/api/: types.ts
tango/frontend/src/lib/components/: GameTile.svelte
tango/frontend/src/lib/game/: PuzzleGenerator.ts  TangoBoardSolver.ts  demo.ts  types.ts
tango/frontend/src/routes/: +layout.js  +page.svelte
tango/src/: config.py
tests/: test_tango.py
video_edit_detector/: .gitignore  README.md  analyze_video.py  (+3 more)
(+53 files in other folders)
